--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../images/member/nadia.svg" class="d-block w-100" alt="Nadia">
+            <img src="../images/member/Nadia.svg" class="d-block w-100" alt="Nadia">
             <div class="carousel-caption d-none d-md-block">
               <h5>Nadia Jayanti Br Situmorang</h5>
               <p>Data Visualization & Pitch Deck</p>
